[package]
name = "scopefunc"
version = "0.1.0"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"
repository = "https://github.com/statiolake/scopefunc-rs"
keywords = ["function", "scope", "ergonomics", "kotlin"]
license-file = "LICENSE"
readme = "README.md"
description = "A trait defining kotlin-like scope functions."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
